compiler/tests/fail/stack_allocation/x86-64/partial_region.jazz
// For the moment, the analysis reasons at (sub-)array level. In particular,
// reading any cell from an array is invalid if the array is not fully valid,
// even though we could prove that the cell is valid (especially when everything
// is constant).

export fn main () -> reg u64 {
  stack u64[2] s;
  reg ptr u64[1] r;
  reg u64 tmp res;

  s[0] = 0; s[1] = 1;
  r = s[0:1];
  r[0] = 1; // after writing to r, s is partial
  tmp = s[1]; // s is not fully valid -> error
  res = r[0];
  res += tmp;

  return res;
}
